feat: Implement Core Timeline Features
- Add Supabase Storage 'memories' bucket integration
- Implement Add Event screen with ImagePicker & ImageManipulator
- Implement Timeline screen with FlashList/FlatList
- Fix native module issues (ImagePicker, FileSystem)
- Ensure descending order (Newest first) for timeline events
- Clean up unused files and logs

--- a/app.json
+++ b/app.json
@@ -41,7 +41,8 @@
     "plugins": [
       "expo-router",
       "@react-native-google-signin/google-signin",
-      "expo-font"
+      "expo-font",
+      "@react-native-community/datetimepicker"
     ]
   }
 }
