feat: enhance naver map integration and fix navigation issues

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ EXPO_PUBLIC_SUPABASE_URL=https://qrzrjznlkjivkmljknez.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_D8fol8HI11tZ4dw9KiCCaA_KMhyHake
 EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID=904652548755-0m93bdjbjquffcml1f3jdiglg7e3ub2g.apps.googleusercontent.com
 EXPO_PUBLIC_GOOGLE_IOS_CLIENT_ID=904652548755-aceprgttistgpbk3c9qbhg5j20nil2ce.apps.googleusercontent.com
+EXPO_PUBLIC_NAVER_MAP_CLIENT_ID=pkf2bw4xeq
+EXPO_PUBLIC_NAVER_MAP_CLIENT_SECRET=PkmaeX78D6ioK0SS4pSl3Nl0vcDuP8mZchcqDMJp
+EXPO_PUBLIC_NAVER_SEARCH_CLIENT_ID=BjnyMtZ5FOkEI9gToCx6
+EXPO_PUBLIC_NAVER_SEARCH_CLIENT_SECRET=Ny4xIKjiMq
