--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-google-signin/google-signin": "^16.1.1",
     "@shopify/flash-list": "2.0.2",
     "@supabase/supabase-js": "^2.95.3",
+    "@types/proj4": "^2.5.6",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
     "expo": "~54.0.33",
@@ -31,6 +32,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
     "nativewind": "^4.2.1",
+    "proj4": "^2.20.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
